add list of BTC-USD(-, T, C) sumbols

--- a/api_fetch_v003.ipynb
+++ b/api_fetch_v003.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-19T17:09:55.038253Z",
-     "start_time": "2024-09-19T17:09:53.435083Z"
+     "end_time": "2024-09-19T17:15:49.682312Z",
+     "start_time": "2024-09-19T17:15:48.603769Z"
     }
    },
    "source": [
@@ -62,7 +62,16 @@
     "        (futures_df['base_asset'] == 'BTC') & \n",
     "        (futures_df['is_perpetual'] == True) &\n",
     "        (futures_df['quote_asset'].isin(['USD', 'USDT', 'USDC']))\n",
-    "    ]\n",
+    "    ].copy()  # Create a copy to avoid SettingWithCopyWarning\n",
+    "    \n",
+    "    return btc_perpetual_df\n",
+    "\n",
+    "def add_exchange_names(btc_perpetual_df, exchanges_df):\n",
+    "    # Create a dictionary mapping exchange codes to names\n",
+    "    exchange_dict = dict(zip(exchanges_df['code'], exchanges_df['name']))\n",
+    "    \n",
+    "    # Add a new column 'exchange_name' by mapping the 'exchange' column\n",
+    "    btc_perpetual_df['exchange_name'] = btc_perpetual_df['exchange'].map(exchange_dict)\n",
     "    \n",
     "    return btc_perpetual_df\n",
     "\n",
@@ -77,6 +86,7 @@
     "        print(\"Exchanges DataFrame saved to 'supported_exchanges.csv'\")\n",
     "    else:\n",
     "        print(\"Failed to retrieve supported exchanges.\")\n",
+    "        return\n",
     "\n",
     "    # Fetch and process future markets\n",
     "    future_markets = get_supported_future_markets()\n",
@@ -89,6 +99,10 @@
     "        \n",
     "        # Filter for BTC perpetual futures with USD-based quote assets\n",
     "        btc_perpetual_df = filter_btc_perpetual_futures(futures_df)\n",
+    "        \n",
+    "        # Add exchange names to the BTC perpetual futures DataFrame\n",
+    "        btc_perpetual_df = add_exchange_names(btc_perpetual_df, exchanges_df)\n",
+    "        \n",
     "        print(\"\\nBTC Perpetual Futures with USD-based quote assets (first 5 rows):\")\n",
     "        print(btc_perpetual_df.head())\n",
     "        btc_perpetual_df.to_csv('btc_perpetual_futures_usd.csv', index=False)\n",
@@ -151,17 +165,24 @@
       "198       NaT               True          True   STABLE   \n",
       "267       NaT               True          True   STABLE   \n",
       "\n",
-      "    oi_lq_vol_denominated_in  has_long_short_ratio_data  has_ohlcv_data  \n",
-      "41               QUOTE_ASSET                       True            True  \n",
-      "177               BASE_ASSET                       True            True  \n",
-      "179              QUOTE_ASSET                       True            True  \n",
-      "198               BASE_ASSET                       True            True  \n",
-      "267               BASE_ASSET                       True            True  \n",
+      "    oi_lq_vol_denominated_in  has_long_short_ratio_data  has_ohlcv_data  \\\n",
+      "41               QUOTE_ASSET                       True            True   \n",
+      "177               BASE_ASSET                       True            True   \n",
+      "179              QUOTE_ASSET                       True            True   \n",
+      "198               BASE_ASSET                       True            True   \n",
+      "267               BASE_ASSET                       True            True   \n",
+      "\n",
+      "    exchange_name  \n",
+      "41        Binance  \n",
+      "177         Bybit  \n",
+      "179         Bybit  \n",
+      "198       Binance  \n",
+      "267       Binance  \n",
       "BTC Perpetual Futures DataFrame saved to 'btc_perpetual_futures_usd.csv'\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   }
  ],
  "metadata": {
