comment the print .head()

--- a/api_fetch_v003.ipynb
+++ b/api_fetch_v003.ipynb
@@ -80,8 +80,8 @@
     "    exchanges = get_supported_exchanges()\n",
     "    if exchanges:\n",
     "        exchanges_df = create_exchanges_dataframe(exchanges)\n",
-    "        print(\"Supported Exchanges (first 5 rows):\")\n",
-    "        print(exchanges_df.head())\n",
+    "        #print(\"Supported Exchanges (first 5 rows):\")\n",
+    "        #print(exchanges_df.head())\n",
     "        exchanges_df.to_csv('supported_exchanges.csv', index=False)\n",
     "        print(\"Exchanges DataFrame saved to 'supported_exchanges.csv'\")\n",
     "    else:\n",
@@ -92,8 +92,8 @@
     "    future_markets = get_supported_future_markets()\n",
     "    if future_markets:\n",
     "        futures_df = create_supported_futures_markets_dataframe(future_markets)\n",
-    "        print(\"\\nSupported Future Markets (first 5 rows):\")\n",
-    "        print(futures_df.head())\n",
+    "        #print(\"\\nSupported Future Markets (first 5 rows):\")\n",
+    "        #print(futures_df.head())\n",
     "        futures_df.to_csv('supported_future_markets.csv', index=False)\n",
     "        print(\"Future Markets DataFrame saved to 'supported_future_markets.csv'\")\n",
     "        \n",
@@ -103,8 +103,8 @@
     "        # Add exchange names to the BTC perpetual futures DataFrame\n",
     "        btc_perpetual_df = add_exchange_names(btc_perpetual_df, exchanges_df)\n",
     "        \n",
-    "        print(\"\\nBTC Perpetual Futures with USD-based quote assets (first 5 rows):\")\n",
-    "        print(btc_perpetual_df.head())\n",
+    "        #print(\"\\nBTC Perpetual Futures with USD-based quote assets (first 5 rows):\")\n",
+    "        #print(btc_perpetual_df.head())\n",
     "        btc_perpetual_df.to_csv('btc_perpetual_futures_usd.csv', index=False)\n",
     "        print(\"BTC Perpetual Futures DataFrame saved to 'btc_perpetual_futures_usd.csv'\")\n",
     "    else:\n",
