--- a/api_fetch_v006.ipynb
+++ b/api_fetch_v006.ipynb
@@ -5,10 +5,8 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2024-09-22T01:38:03.899139Z",
      "start_time": "2024-09-22T01:36:18.054274Z"
     }
    },
@@ -219,11 +217,15 @@
      "text": [
       "Exchanges DataFrame saved to 'supported_exchanges.csv'\n",
       "Future Markets DataFrame saved to 'supported_future_markets.csv'\n",
-      "BTC Perpetual Futures DataFrame saved to 'btc_perpetual_futures_usd.csv'\n"
+      "BTC Perpetual Futures DataFrame saved to 'btc_perpetual_futures_usd.csv'\n",
+      "Open Interest History DataFrame saved to 'open_interest_history.csv'\n",
+      "Rate limit reached. Waiting for 14 seconds before retrying...\n",
+      "Funding Rate History DataFrame saved to 'funding_rate_history.csv'\n",
+      "Liquidation History DataFrame saved to 'liquidation_history.csv'\n"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 5
   }
  ],
  "metadata": {
